cluster/apps/default/raspberrymatic/middleware.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: Middleware
metadata:
  name: hmrpc-allowlist
  namespace: traefik
spec:
  ipWhiteList:
    sourceRange:
       - 192.168.1.0/24
       - 192.168.8.0/24
