cluster/apps/default/raspberrymatic/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: homematic
  namespace: default
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
spec:
  tls:
    - secretName: homematic-tls
      hosts:
        - homematic.bergmann.click
  rules:
  - host: homematic.bergmann.click
    http:
      paths:
        - pathType: Prefix
          path: "/"
          backend:
            service:
              name: raspberrymatic
              port:
                number: 80
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: hmrpc
  namespace: default
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
#    traefik.ingress.kubernetes.io/router.middlewares: default-hmrpc-allowlist@kubernetescrd
spec:
  tls:
    - secretName: hmrpc-tls
      hosts:
        - hmrpc-ip.bergmann.click
        - hmrpc-groups.bergmann.click
  rules:
  - host: hmrpc-ip.bergmann.click
    http:
      paths:
        - pathType: Prefix
          path: "/"
          backend:
            service:
              name: raspberrymatic
              port:
                number: 2010
  - host: hmrpc-groups.bergmann.click
    http:
      paths:
        - pathType: Prefix
          path: "/"
          backend:
            service:
              name: raspberrymatic
              port:
                number: 9292
